--- a/config/alacritty/alacritty.yml
+++ b/config/alacritty/alacritty.yml
@@ -196,32 +196,45 @@
 # If `true`, bold text is drawn using the bright color variants.
 #draw_bold_text_with_bright_colors: false
 
-# Colors (Pencil Dark)
+# Colors (Remedy - Dark)
 colors:
-  # Default Colors
+  # Default colors
   primary:
-    background: '0x212121'
-    foreground: '0xf1f1f1'
+    background: '0x2c2b2a'
+    foreground: '0xf9e7c4'
+
+    dim_foreground:    '0x685E4A'
+    bright_foreground: '0x1C1508'
+    dim_background:    '0x202322'
+    bright_background: '0x353433'
+
+  # Cursor colors
+  cursor:
+    text:   '0xf9e7c4'
+    cursor: '0xf9e7c4'
+
   # Normal colors
   normal:
-    black:   '0x212121'
-    red:     '0xc30771'
-    green:   '0x10a778'
-    yellow:  '0xa89c14'
-    blue:    '0x008ec4'
-    magenta: '0x523c79'
-    cyan:    '0x20a5ba'
-    white:   '0xe0e0e0'
+    black:   '0x282a2e'
+    blue:    '0x5f819d'
+    cyan:    '0x5e8d87'
+    green:   '0x8c9440'
+    magenta: '0x85678f'
+    orange:  '0xcc6953'
+    red:     '0xa54242'
+    white:   '0x707880'
+    yellow:  '0xde935f'
+
   # Bright colors
   bright:
-    black:   '0x818181'
-    red:     '0xfb007a'
-    green:   '0x5fd7af'
-    yellow:  '0xf3e430'
-    blue:    '0x20bbfc'
-    magenta: '0x6855de'
-    cyan:    '0x4fb8cc'
-    white:   '0xf1f1f1'
+    black:   '0x373b41'
+    blue:    '0x81a2be'
+    cyan:    '0x8abeb7'
+    green:   '0xb5bd68'
+    magenta: '0xb294bb'
+    red:     '0xcc6666'
+    white:   '0xc5c8c6'
+    yellow:  '0xf0c674'
 
 # Bell
 #
