--- a/config/alacritty/alacritty.yml
+++ b/config/alacritty/alacritty.yml
@@ -330,10 +330,10 @@ colors:
 # Default:
 #   - (Linux/BSD/macOS) `$SHELL` or the user's login shell, if `$SHELL` is unset
 #   - (Windows) powershell
-#shell:
-#  program: /bin/bash
-#  args:
-#    - --login
+shell:
+  program: /bin/bash
+  args:
+    - --login
 
 # Startup directory
 #
@@ -648,7 +648,14 @@ colors:
 #
 # If the same trigger is assigned to multiple actions, all of them are executed
 # in the order they were defined in.
-#key_bindings:
+
+key_bindings:
+  - { key: Return, mods: Control, action: SpawnNewInstance }
+
+commands:
+  - { name: SpawnNewInstance, command: alacritty & disown }
+
+  # key_bindings:
   #- { key: Paste,                                       action: Paste          }
   #- { key: Copy,                                        action: Copy           }
   #- { key: L,         mods: Control,                    action: ClearLogNotice }
