--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -25,7 +25,7 @@ monitor=,preferred,auto,auto
 # Set programs that you use
 $terminal = kitty
 $fileManager = dolphin
-$menu = rofi --show drun
+$menu = rofi -modi combi,run,search:~/projects/dotfiles/config/rofi/rofi-web-search.py,calc,window,emoji,filebrowser -show combi -combi-modes run,search,window,emoji,filebrowser
 
 
 #################
