--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -23,7 +23,7 @@ monitor=,preferred,auto,auto
 # See https://wiki.hypr.land/Configuring/Keywords/
 
 # Set programs that you use
-$terminal = kitty
+$terminal = terminator
 $fileManager = dolphin
 $menu = rofi -modi combi,run,search:~/projects/dotfiles/config/rofi/rofi-web-search.py,calc,window,emoji,filebrowser -show combi -combi-modes run,search,window,emoji,filebrowser
 
@@ -35,6 +35,7 @@ $menu = rofi -modi combi,run,search:~/projects/dotfiles/config/rofi/rofi-web-sea
 # Autostart necessary processes (like notifications daemons, status bars, etc.)
 # Or execute your favorite apps at launch like this:
 
+exec-once = waybar
 # exec-once = $terminal
 # exec-once = nm-applet &
 # exec-once = waybar & hyprpaper & firefox
@@ -76,7 +77,7 @@ env = HYPRCURSOR_SIZE,24
 # https://wiki.hypr.land/Configuring/Variables/#general
 general {
     gaps_in = 5
-    gaps_out = 20
+    gaps_out = 5
 
     border_size = 1
 
@@ -95,15 +96,15 @@ general {
 
 # https://wiki.hypr.land/Configuring/Variables/#decoration
 decoration {
-    rounding = 10
-    rounding_power = 2
+    rounding = 0
+    rounding_power = 0
 
     # Change transparency of focused and unfocused windows
     active_opacity = 1.0
     inactive_opacity = 1.0
 
     shadow {
-        enabled = true
+        enabled = false
         range = 4
         render_power = 3
         color = rgba(1a1a1aee)
@@ -111,7 +112,7 @@ decoration {
 
     # https://wiki.hypr.land/Configuring/Variables/#blur
     blur {
-        enabled = true
+        enabled = false
         size = 3
         passes = 1
 
@@ -300,3 +301,11 @@ windowrule = suppressevent maximize, class:.*
 
 # Fix some dragging issues with XWayland
 windowrule = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
+
+#no_gaps_when_only
+workspace = w[tv1], gapsout:0, gapsin:0
+workspace = f[1], gapsout:0, gapsin:0
+windowrulev2 = bordersize 0, floating:0, onworkspace:w[tv1]
+windowrulev2 = rounding 0, floating:0, onworkspace:w[tv1]
+windowrulev2 = bordersize 0, floating:0, onworkspace:f[1]
+windowrulev2 = rounding 0, floating:0, onworkspace:f[1]
