Fix tmux and ghostty config once and for all

--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -1,32 +1,8 @@
 # My Custom Keybindings
 
-# Ctrl+T -> Create a new window (new tab)
+# ctrl+t and ctrl+w
 bind -n C-t new-window
-
-# Ctrl+W -> Close current window (close tab)
 bind -n C-w kill-window
-
-# Ctrl+1 through Ctrl+9 -> Switch to window (tab) 0–8
-bind -n C-1 select-window -t 0
-bind -n C-2 select-window -t 1
-bind -n C-3 select-window -t 2
-bind -n C-4 select-window -t 3
-bind -n C-5 select-window -t 4
-bind -n C-6 select-window -t 5
-bind -n C-7 select-window -t 6
-bind -n C-8 select-window -t 7
-bind -n C-9 select-window -t 8
-
-# escape mappings for ghostty bypass on macos
-bind -n M-1 select-window -t 0
-bind -n M-2 select-window -t 1
-bind -n M-3 select-window -t 2
-bind -n M-4 select-window -t 3
-bind -n M-5 select-window -t 4
-bind -n M-6 select-window -t 5
-bind -n M-7 select-window -t 6
-bind -n M-8 select-window -t 7
-bind -n M-9 select-window -t 8
 
 # Options to make tmux more pleasant
 
