--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -4,8 +4,13 @@
 bind -n C-t new-window
 bind -n C-w kill-window
 
+# rebind ctrl+c
+unbind-key -n C-c
+bind-key  -n C-c send-keys C-c
+
 # Options to make tmux more pleasant
 
+set -g renumber-windows on # automatically re-index tabs
 set -g mouse on
 set -g default-terminal "tmux-256color"
 
